--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: black;
-  height: 4vh;
+  height: 6vh;
   padding: 0 25px;
   color: white;
   width: 100%;
@@ -29,7 +29,7 @@ body {
   font-weight: bold;
 }
 .header .logo img {
-  max-height: 4vh;
+  max-height: 10vh;
   margin-right: 10px;
 }
 .header .hamburger {
@@ -106,6 +106,7 @@ body {
   margin-right: 10px;
   width: 60%;
   border-right: 4px solid black;
+  margin-bottom: 50px;
 }
 .content .recipes-list .recipe-container {
   display: flex;
@@ -216,11 +217,69 @@ body {
   border: none;
 }
 
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 60%;
+  margin: 0 auto;
+  padding: 20px;
+}
+.comment-form .form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.comment-form .form-field label {
+  margin-bottom: 5px;
+}
+.comment-form .form-field input[type=text],
+.comment-form .form-field textarea {
+  padding: 10px;
+  border: 1px solid #b3b3b3;
+  border-radius: 4px;
+}
+.comment-form .form-field input[type=text]:focus,
+.comment-form .form-field textarea:focus {
+  outline: none;
+  border-color: #919191;
+}
+.comment-form .form-field .rating {
+  display: flex;
+  justify-content: space-between;
+}
+.comment-form .form-field .rating input {
+  display: none;
+}
+.comment-form .form-field .rating label {
+  cursor: pointer;
+  padding: 5px 10px;
+  border: 1px solid #b3b3b3;
+  border-radius: 4px;
+}
+.comment-form .form-field .rating label:hover {
+  background-color: white;
+}
+.comment-form .form-field .rating input:checked + label {
+  background-color: #c4c4c4;
+}
+.comment-form button {
+  padding: 10px 15px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+.comment-form button:hover {
+  background-color: #1a1a1a;
+}
+
 .footer {
   background-color: black;
   color: white;
   text-align: center;
-  height: 4vh;
+  height: 8vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -240,14 +299,10 @@ body {
     padding: 0;
     margin: 0;
   }
-  .header .hamburger {
-    display: block;
-  }
   .nav-menu {
     position: fixed;
     top: 0;
-    right: 0;
-    transform: translateX(100%);
+    right: 100%;
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
@@ -274,6 +329,12 @@ body {
     display: block;
     padding: 10px 0;
   }
+  .header .logo {
+    font-size: 15px;
+  }
+  .header .hamburger {
+    display: block;
+  }
   .main-grid {
     display: block;
     height: auto;
@@ -292,7 +353,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20%;
+    width: 50%;
     opacity: 1;
     padding: 20px;
   }
@@ -379,5 +440,8 @@ img.recipe-image {
   }
   #search-container button {
     display: none;
+  }
+  .comment-form {
+    max-width: 90%;
   }
 }/*# sourceMappingURL=styles.css.map */
